# Virtual-Wallet-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_mac.sh  init_win.ps1  pyproject.toml  pytest.ini  requirements.txt  sql_app.db
.github/workflows/: main.yml
src/: .env_template  run_server.py
src/app/: main.py
src/app/alembic/: env.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: auth.py  auth_email.py  auth_google.py  auth_mail.py  card.py  category.py  contact.py  hello_world.py  items.py  recurring_transaction.py  transaction.py  user.py  wallet.py
src/app/core/: config.py
src/app/schemas/: __init__.py  card.py  category.py  contact.py  email_user.py  schemas.py  transaction.py  user.py  wallet.py
src/app/services/: auth.py  crud.py
src/app/services/common/: custom_response.py  phone.py  response.py  utils.py  verification.py
src/app/services/crud/: auth.py  auth_email.py  auth_google.py  auth_mail.py  card.py  category.py  contact.py  email_user.py  recurring_transaction.py  transaction.py  user.py  verification.py  wallet.py
src/app/sql_app/: database.py  models.py  schemas.py
src/app/sql_app/models/: __innit__.py  card.py  category.py  enumerate.py  models.py  role.py  transaction.py  user.py
tests/: test_card.py  test_category.py  test_contact.py  test_email_user.py  test_recurring_transaction.py  test_transaction.py  test_user.py  test_wallet.py
virtual-wallet/: package-lock.json  package.json
