[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "Virtual_Wallet"
version = "0.0.1"
description = "Virtual Wallet"
classifiers = ["Private :: Do Not Upload", "Programming Language :: Python :: 3.11"]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.109.1",
    "uvicorn==0.23.2",
    "environs==9.5.0",
    "pydantic-settings==2.0.3",
    "SQLAlchemy==2.0.30",
    "fastapi-utilities==0.2.0",
    "itsdangerous=2.2.0",
    "alembic==1.13.2"
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "httpx==0.27.0",
    "twilio==9.1.1",
    "pydantic==2.7.3",
    "pydantic[email]",
    "passlib==1.7.4",
    "python-multipart==0.0.9",
    "bcrypt==4.1.3",
    "python-jose==3.3.0"
]

[project.optional-dependencies]
test = [
    "autoflake==2.2.1",
    "black==23.9.1",
    "isort[colors]==5.8.0",
    "mypy==1.5.1",
    "pylint==3.0.0a7",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.7",
    "coverage==7.3.1"
]

[project.urls]
Source = "https://github.com/Web-Team-Project/Virtual-Wallet"

[tool.black]
exclude = '(.git|.mypy_cache|.venv)'
include = '.pyi?$'
target-version = ['py311']
max-line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
count = true
ignore = ["E203", "E127", "E128", "W291", "F821", "F811", "W503", "C417"]
per-file-ignores = [
    "tests/:T20",
    "integration_tests/:T20",
    "tests/:T20",
    "integration_tests/:T20",
    "cli.py:T20"
]

[tool.pytest.ini_options]
addopts = "--cache-clear --log-cli-level=DEBUG --strict-markers --cov-branch --cov-fail-under=30"
junit_family = "xunit2"
log_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration with other components",
    "api: marks tests as api tests"
]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 50
omit = [
  "tests/",
  "src/mm_reprocess/",
  "src/config.py",
  "src/profiler_utils.py"
]